2003-08-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/tkUnixButton.c (TkpDisplayButton): Stopped accesses to NULL
	* unix/tkUnixMenu.c (TkpDrawMenuEntry):   pointers that crashed tests.

	TIP #109 IMPLEMENTATION FROM Brian Griffin <bgriffin@model.com>
	* unix/tkUnixButton.c (TkpDrawCheckIndicator, TkpDisplayButton):
	* unix/tkUnixMenu.c (DrawMenuEntryIndicator, TkpDrawMenuEntry):
	Much improved display of checkbuttons and radiobuttons on UNIX/X.

2003-08-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/scale.tcl: Fix for bug #787065 for Button-2 press.
	* tests/scale.test:  Added test for this bug.

2003-08-12  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXMenu.c: fixed C99'ism that breaks gcc 2.95.

2003-07-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinDialog.c: Applied patch from bug #611615 which fixes a
	problem with double clicks in file dialogs falling through to the
	window underneath in win32.

	* library/panedwindow.tcl: Apply patch from bug #778893 to make
	the panedwindow -opaqueresize option work as per the docs.

	* library/tk.tcl: Apply fix for bug #778840 for window placement
	when using multiple desktops on windows.

2003-07-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinCursor.c: Fix for bug #776646 for a native hand2 and
	fleur (move) cursor under win.
	* tests/cursor.test: Check that documented cursors are available.

2003-07-20  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/buildTkConfig.tcl: fix to TK_BUILD_* ref generation
	broken by changes to tcl buildsystem.

2003-07-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinCursor.c (TkGetCursorByName): Fix bug 420510 to provide
	consistency between unix and windows -cursor option.

	* library/scale.tcl: Fix for bug 706765 to correctly handle the 
	-sliderrelief option while moving the thumb.

2003-07-18  Jeff Hobbs  <jeffh@ActiveState.com>
