@@ -1,3 +1,9 @@
+2003-08-15  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkImgPhoto.c (ImgPhotoCmd): Faster color data parsing
+	code for the [$photo put] subcommand.  Now doesn't do everything
+	through the pre-8.0 list handling routines!
+
 2003-08-14  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* unix/tkUnixButton.c (TkpDisplayButton): Stopped accesses to NULL
